home page more link alignment fix

--- a/src/scss/partials/_maincontent.scss
+++ b/src/scss/partials/_maincontent.scss
@@ -26,6 +26,9 @@ main {
 					}
 				}
 			}
+			.more-link-wrapper {
+				padding-left: 0;
+			}
 		}
 
 		&.home-perspectives {
